refactor: changed id button to classname, removed the version specifiers in package.json, add package-lock.json in gitignore.

--- a/english-for-kids/src/index2.html
+++ b/english-for-kids/src/index2.html
@@ -35,7 +35,7 @@
           </div>
           <div class="col-auto p-0 align-self-center"> 
             <div class="button-cover">
-              <div class="button b2" id="button-10">
+              <div class="button b2 button-10">
                 <input type="checkbox" class="checkbox" id="swich">
                 <div class="knobs">
                   <span>TRAIN</span>
