--- a/english-for-kids/src/index3.html
+++ b/english-for-kids/src/index3.html
@@ -36,7 +36,7 @@
           </div>
           <div class="col-auto p-0 align-self-center"> 
             <div class="button-cover" style="opacity: 0.4;">
-              <div class="button b2" id="button-10">
+              <div class="button b2 button-10">
                 <input type="checkbox" class="checkbox" id="swich" disabled>
                 <div class="knobs">
                   <span>TRAIN</span>
