--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -3,11 +3,48 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Movie-search</title>
-  
+    <title>Movie-search</title>  
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <header class="container header-container">
+      <span class="header-container__logo">MovieSearch</span>            
+    </header>
+    <main class="container main-container">
+      <form action="" class="container search-form-container">
+        <input type="text" class="search-form-container__input">
+        <button type="button" class="search-form-container__button btn btn-info">Search</button>
+      </form>
+      <!-- <div class="container swiper-container"> -->
+        <!-- Slider main container -->
+        <div class="swiper-container">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+            <div class="swiper-slide">Slide 7</div>
+            <div class="swiper-slide">Slide 8</div>
+            <div class="swiper-slide">Slide 9</div>      
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+
+<!--       </div>
+ -->
+    </main>
+    <footer class="container footer-container">
+      <a class="footer-container__link">RS School 2020q1</a>
+      <a class="footer-container__link">Github</a>
+    </footer>       
   </body>
 </html>
