feat: stylized header end search form

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header class="container header-container">
-      <span class="header-container__logo">MovieSearch</span>            
+    <header class="container header header_medium">
+      <span class="header__logo header__logo_center">MovieSearch</span>            
     </header>
-    <main class="container main-container">
-      <form action="" class="container search-form-container">
-        <input type="text" class="search-form-container__input">
-        <button type="button" class="search-form-container__button btn btn-info">Search</button>
+    <main class="container main">
+      <form action="" class="container search-form search-form_medium">
+        <input type="text" class="search-form__input search-form__input_medium">
+        <button type="button" class="search-form__button btn btn-info">Search</button>
       </form>
       <!-- <div class="container swiper-container"> -->
         <!-- Slider main container -->
@@ -21,11 +21,21 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 4</div>
-            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">
+              <img src="req.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="req.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="req.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="req.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="req.jpg" alt="">
+            </div>
             <div class="swiper-slide">Slide 6</div>
             <div class="swiper-slide">Slide 7</div>
             <div class="swiper-slide">Slide 8</div>
