feat: update swiper settings

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -22,19 +22,20 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-              <img src="req.jpg" alt="">
+              <span class="swiper-slide__title">Requiem For A Dream</span>
+              <img class="swiper-slide__img" src="req.jpg" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="req.jpg" alt="">
+              <img class="swiper-slide__img" src="req.jpg" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="req.jpg" alt="">
+              <img class="swiper-slide__img" src="req.jpg" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="req.jpg" alt="">
+              <img class="swiper-slide__img" src="req.jpg" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="req.jpg" alt="">
+              <img class="swiper-slide__img" src="req.jpg" alt="">
             </div>
             <div class="swiper-slide">Slide 6</div>
             <div class="swiper-slide">Slide 7</div>
