--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -18,9 +18,10 @@
               <img src="https://drive.google.com/uc?export=view&id=18IsetLvbenupL2uO3dGgK1x5dtI1YFHD" alt="" class="search-form__icon-search">
             </span>
           </div>
-          <input type="text" class="form-control search-form__input search-form__input_medium" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input autofocus type="text" class="form-control search-form__input search-form__input_medium" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Search movie">
           <div class="input-group-append">
             <img src="https://drive.google.com/uc?export=view&id=1_eLN9iJY3T5Re3UwlwPKoRkol62d2AfU" alt="" class="search-form__load-indicator">
+            <button class="btn btn-outline-secondary search-form__button btn-light" type="button"></button>
             <button class="btn btn-outline-secondary search-form__button btn-info" type="submit">Search</button>
           </div>
         </div>
