feat: notice errors end search

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -24,8 +24,13 @@
             <button class="btn btn-outline-secondary search-form__button btn-light" type="button"></button>
             <button class="btn btn-outline-secondary search-form__button btn-info" type="submit">Search</button>
           </div>
+        </div>        
+      </form>
+      <div class="container notice-container notice-container__medium">
+        <div class="alert alert-light notice-container_text" role="alert">
+          Это инфо-уведомление — check it out!
         </div>
-      </form> 
+      </div> 
       <div class="container swiper">    
         <div class="swiper-container">
           <div class="swiper-wrapper">
