feat: add clear button +title link

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -18,17 +18,16 @@
               <img src="https://drive.google.com/uc?export=view&id=18IsetLvbenupL2uO3dGgK1x5dtI1YFHD" alt="" class="search-form__icon-search">
             </span>
           </div>
-          <input autofocus type="text" class="form-control search-form__input search-form__input_medium" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Search movie">
+          <input autofocus type="text" class="form-control search-form__input search-form__input_medium" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Search movie" maxlength="55">
+          <img src="https://drive.google.com/uc?export=view&id=1Z5LWMeKSCueRoKf0SITd-LFyUq4IgUsF" alt="" class="search-form__img-button-clear">
           <div class="input-group-append">
             <img src="https://drive.google.com/uc?export=view&id=1_eLN9iJY3T5Re3UwlwPKoRkol62d2AfU" alt="" class="search-form__load-indicator">
-            <button class="btn btn-outline-secondary search-form__button btn-light" type="button"></button>
             <button class="btn btn-outline-secondary search-form__button btn-info" type="submit">Search</button>
           </div>
         </div>        
       </form>
       <div class="container notice-container notice-container__medium">
-        <div class="alert alert-light notice-container_text" role="alert">
-          Это инфо-уведомление — check it out!
+        <div class="alert alert-light notice-container_text" role="alert">          
         </div>
       </div> 
       <div class="container swiper">    
