--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Movie-search</title>  
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="body">
     <header class="container header header_medium">
       <span class="header__logo header__logo_center">MovieSearch</span>            
     </header>
@@ -25,10 +25,10 @@
             <img src="https://drive.google.com/uc?export=view&id=1_eLN9iJY3T5Re3UwlwPKoRkol62d2AfU" alt="" class="search-form__load-indicator">
             <button class="btn btn-outline-secondary search-form__button btn-info" type="submit">Search</button>
           </div>
-        </div>        
+        </div>
       </form>
-      <div class="container notice-container notice-container__medium">
-        <div class="alert alert-light notice-container_text" role="alert">          
+      <div class="container notice notice__medium">
+        <div class="alert alert-light notice_text" role="alert">          
         </div>
       </div> 
       <div class="container swiper">    
