--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -20,15 +20,15 @@
           </div>
           <input autofocus type="text" class="form-control search-form__input search-form__input_medium" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Search movie" maxlength="55">
           <div class="input-group-append">
-            <img src="https://drive.google.com/uc?export=view&id=1Z5LWMeKSCueRoKf0SITd-LFyUq4IgUsF" alt="" class="search-form__img-button-clear">
-            <img src="https://drive.google.com/uc?export=view&id=1eV_5619WBis2tpSrh-pP5K5YHmRh2nmb" alt="" class="search-form__img-button-keyboard">
             <img src="https://drive.google.com/uc?export=view&id=1_eLN9iJY3T5Re3UwlwPKoRkol62d2AfU" alt="" class="search-form__load-indicator">
-            <button class="btn btn-outline-secondary search-form__button btn-info" type="submit">Search</button>
+            <button class="btn btn-outline-secondary btn-light search-form__button-clear search-form__button-clear--small" type="button"></button>
+            <button class="btn btn-outline-secondary btn-light search-form__button-keyboard search-form__button-keyboard--small" type="button"></button>
+            <button class="btn btn-outline-secondary btn-light search-form__button-submit" type="submit">Search</button>
           </div>
         </div>
       </form>
-      <div class="container notice notice__medium">
-        <div class="alert alert-light notice_text" role="alert">          
+      <div class="container notice notice--medium">
+        <div class="alert alert-light notice__text" role="alert">          
         </div>
       </div> 
       <div class="container swiper">    
@@ -41,10 +41,10 @@
         <div class="swiper-button-next"></div>
       </div> 
     </main>
-    <footer class="container footer footer_medium">
+    <footer class="container footer footer--medium">
       <a class="footer__link">RS School 2020q1</a>      
       <a href="https://github.com/YuriySga" class="github-link footer__github-link">
-        <svg class="github-block__icon" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill="white" fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
+        <svg class="github-link__icon" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill="white" fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
         Github
       </a>
     </footer>       
