--- a/fancy-weather/public/index.html
+++ b/fancy-weather/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>React App</title>
+    <title>Fancy-weather</title>
   </head>
   <body>
     <div id="root"></div>
+   <!--  <div id="map"></div> -->
   </body>
 </html>
