--- a/fancy-weather/public/index.html
+++ b/fancy-weather/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta name="theme-color" content="#000000" />
     <title>Fancy-weather</title>
   </head>
-  <body>
+  <body class="body">
     <div id="root"></div>
    <!--  <div id="map"></div> -->
   </body>
