--- a/fancy-weather/public/index.html
+++ b/fancy-weather/public/index.html
@@ -10,7 +10,7 @@
     <title>Fancy-weather</title>
   </head>
   <body class="body">
-    <div id="root"></div>
+    <div class="root" id="root"></div>
    <!--  <div id="map"></div> -->
   </body>
 </html>
